home/home-protect-email-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: protect-email-deployment
  namespace: hinze-dev-home
  labels:
    app: hinze-dev-protect-email
spec:
  revisionHistoryLimit: 2
  replicas: 2
  selector:
    matchLabels:
      app: hinze-dev-protect-email
  template:
    metadata:
      labels:
        app: hinze-dev-protect-email
    spec:
      containers:
        - image: jhinze/protect-email-api:version-1.0.1
          name: hinze-dev-protect-email
          resources:
            requests:
              memory: 32Mi
              cpu: 100m
            limits:
              memory: 64Mi
              cpu: 200m
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 2
          ports:
            - containerPort: 80
              protocol: TCP
