home/home-protect-email-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: protect-email-service
  namespace: hinze-dev-home
spec:
  selector:
    app: hinze-dev-protect-email
  ports:
    - port: 80
      targetPort: 8080
