home/home-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hinze-dev-home-ingress
  namespace: hinze-dev-home
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: www.hinze.dev
      http:
        paths:
          - backend:
              serviceName: www-service
              servicePort: 80
            path: /
          - backend:
              serviceName: protect-email-service
              servicePort: 80
            path: /email-api/
  tls:
    - hosts:
        - www.hinze.dev
      secretName: hinze-dev-home-tls-secret
