home/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hinze-dev-home-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: www.hinze.dev
      http:
        paths:
          - path: /email-api/(.*)
            backend:
              serviceName: hinze-dev-email-api-service
              servicePort: 80
          - path: /(.*)
            backend:
              serviceName: hinze-dev-www-service
              servicePort: 80
  tls:
    - hosts:
        - www.hinze.dev
      secretName: hinze-dev-home-tls-secret
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hinze-dev-justin-ingress
  namespace: hinze-dev-home
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: justin.hinze.dev
      http:
        paths:
          - path: /email-api/(.*)
            backend:
              serviceName: hinze-dev-email-api-service
              servicePort: 80
          - path: /(.*)
            backend:
              serviceName: hinze-dev-www-service
              servicePort: 80
  tls:
    - hosts:
        - justin.hinze.dev
      secretName: hinze-dev-justin-tls-secret
